# RK3576-NPU-Models

./: .cnb.yml  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  SECURITY.md  SECURITY_zh.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  model_request.md  model_request.yml
deepseek-ocr-rk3576/: CMakeLists.txt  README.md  build.sh  setup.sh
deepseek-ocr-rk3576/models/: README.txt
deepseek-ocr-rk3576/scripts/: run.sh  test_multi.sh  test_single.sh
deepseek-ocr-rk3576/src/: main.cpp
lite_transformer-rk3576/: CMakeLists.txt  README.md  build.sh  clean.sh  run.sh  setup.sh
lite_transformer-rk3576/scripts/: test_multi.sh  test_single.sh
mms_tts-rk3576/: README.md  clean.sh  prepare_models.sh  requirements-board.txt  requirements.txt  run.sh  setup.sh  setup_board.sh
mms_tts-rk3576/python/: convert_rknn.py  mms_tts.py
mms_tts-rk3576/scripts/: download_onnx.sh  test_batch.sh  test_multi.sh  test_single.sh
ppocr-rk3576/: CMakeLists.txt  README.md  build.sh  copy_deps.sh  prepare_models.sh  setup.sh
ppocr-rk3576/scripts/: test_multi.sh  test_single.sh
ppocr-rk3576/src/: main.cpp
qwen3-vl-rk3576/: CMakeLists.txt  README.md  build.sh  setup.sh
qwen3-vl-rk3576/scripts/: run.sh  test_multi.sh  test_single.sh
qwen3-vl-rk3576/src/: main.cpp
whisper-rk3576/: README.md  prepare_models.sh  requirements-board.txt  setup_board.sh
whisper-rk3576/python/: convert_rknn.py  whisper.py
whisper-rk3576/scripts/: download_onnx.sh  test_multi.sh  test_single.sh
zipformer-rk3576/: CMakeLists.txt  README.md  build.sh  build_deps.sh  build_kaldi.sh  clean.sh  prepare_models.sh  run.sh  setup.sh
zipformer-rk3576/python/: convert.py
zipformer-rk3576/scripts/: test_multi.sh  test_single.sh
zipformer-rk3576/src/: main.cc  process.cc  process.h  zipformer.cc  zipformer.h
